--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,10 +1,11 @@
 header {
   align-items: center;
-  background-color: rgb(255, 249, 245);
+  background-color: rgb(255, 243, 234);
+  border-bottom: 2px solid rgba(150, 150, 150, 0.316);
+  box-shadow: 0px -5px 25px -3px rgb(30, 30, 30);
   display: flex;
   justify-content: space-between;
   padding-right: 10rem;
-  box-shadow: 0px -5px 15px -3px rgb(30, 30, 30);
 }
 
 .imgDiv {
@@ -16,18 +17,20 @@ header {
 }
 
 img {
-  width: 320px;
+  width: 220px;
 }
 
 @media (max-width: 40rem) {
   header {
     align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0;
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 1rem;
+    padding: 0;
   }
+
   .imgDiv {
     border-radius: 0;
     border-bottom-left-radius: 50%;
@@ -39,15 +42,18 @@ img {
 @media (min-width: 1900px) {
   header {
     padding-right: 20rem;
+    box-shadow: 0px -5px 15px -3px rgb(30, 30, 30);
   }
+
   img {
-    width: 400px;
+    width: 250px;
   }
+  
   .imgDiv {
     background-color: rgb(253, 227, 208);
     border-bottom-right-radius: 250px;
     border-top-right-radius: 250px;
-    padding: 2rem;
+    padding: 1rem;
     padding-right: 8rem;
   }
 }
