services ok, i guess

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -5,6 +5,9 @@
   display: flex;
   justify-content: space-between;
   padding: 2rem 5rem;
+  /* position: sticky; */
+  flex-shrink: 0;
+  /* margin-top: %; */
 }
 
 .cl {
