--- a/src/Components/Slides/Slide.module.css
+++ b/src/Components/Slides/Slide.module.css
@@ -82,8 +82,10 @@
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
     display: flex;
+    min-height: 290px;
     flex-direction: column;
     justify-content: center;
+    /* padding-bottom: 2rem; */
     position: initial;
     width: 100%;
   }
@@ -99,7 +101,6 @@
 
   .text {
     font-size: 1.2rem;
-    margin-bottom: 1.5rem;
     margin: 0;
     text-align: center;
   }
