--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -3,6 +3,8 @@ header {
   background-color: rgb(255, 243, 234);
   border-bottom: 2px solid rgba(150, 150, 150, 0.316);
   box-shadow: 0px -5px 25px -3px rgb(30, 30, 30);
+  box-shadow: 0px 5px 15px -5px rgb(30, 30, 30);
+
   display: flex;
   justify-content: space-between;
   padding-right: 10rem;
