--- a/src/Components/Slides/Slide.module.css
+++ b/src/Components/Slides/Slide.module.css
@@ -16,7 +16,7 @@
 
 .end {
   font-size: 2.5rem;
-  margin-top: 3rem;
+  /* margin-top: 3rem; */
 }
 
 .textBlock {
@@ -26,7 +26,12 @@
   padding-right: 20px;
   position: absolute;
   top: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 50%;
+  /* background-color: maroon; */
+  height: 80%;
 }
 
 .img {
