--- a/src/Components/Slides/Slide.module.css
+++ b/src/Components/Slides/Slide.module.css
@@ -1,7 +1,7 @@
 .title {
   border-left: 7px solid rgb(201, 3, 3);
   font-size: 8rem;
-  margin-bottom: 2.5rem;
+  /* margin-bottom: 2.5rem; */
   padding-left: 1.5rem;
   text-shadow: 2px 2px 4px rgb(201, 3, 3);
 }
@@ -14,14 +14,23 @@
   text-shadow: 1px 1px 4px rgb(201, 3, 3);
 }
 
+.text {
+  width: 70%;
+}
+
 .end {
   font-size: 2.5rem;
   /* margin-top: 3rem; */
 }
 
 .textBlock {
+  /* background-color: mediumorchid; */
   color: white;
   left: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   padding-left: 20px;
   padding-right: 20px;
   position: absolute;
@@ -29,14 +38,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 50%;
+  width: 70%;
   /* background-color: maroon; */
-  height: 80%;
+  height: 90%;
 }
 
 .img {
-  border-radius: 50px;
-  border: 1px solid rgb(218, 29, 29);
+  border-radius: 30px;
+  /* border: 1px solid rgb(218, 29, 29); */
   height: 900px;
   opacity: 0.6;
   width: 100%;
@@ -48,18 +57,18 @@
   }
 
   .textBlock {
-    left: 2rem;
-    top: 5rem;
-    width: 50%;
+    /* left: 2rem; */
+    /* top: 5rem; */
+    width: 70%;
   }
 
   .title {
-    font-size: 10rem;
+    font-size: 9rem;
     margin-bottom: 5rem;
   }
 
   .text {
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
 
   .end {
@@ -77,7 +86,7 @@
     border-bottom-right-radius: 0;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
-    border: none;
+    /* border: none; */
     height: auto;
     opacity: 1;
   }
@@ -89,25 +98,29 @@
     display: flex;
     min-height: 290px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     /* padding-bottom: 2rem; */
     position: initial;
+    padding: 0;
     width: 100%;
+    height: auto;
+    /* background-color: mediumorchid; */
   }
 
   .title {
     border: none;
     font-size: 2.5rem;
-    margin-bottom: 1rem;
-    margin-top: 1.5rem;
+    /* margin-bottom: 1rem; */
+    /* margin-top: .5rem; */
     padding: 0;
     text-align: center;
   }
 
   .text {
     font-size: 1.2rem;
-    margin: 0;
+    /* margin: 0; */
     text-align: center;
+    width: 95%;
   }
 
   .end {
