--- a/src/Components/SpaServices/SpaServices.module.css
+++ b/src/Components/SpaServices/SpaServices.module.css
@@ -9,10 +9,12 @@
   padding: 2rem;
   padding-right: 4rem;
   box-shadow: 0px 5px 15px -5px rgb(30, 30, 30);
+  /* background-image: -webkit-linear-gradient(-30deg, rgb(254, 197, 157) 50%, rgb(253,227,208) 70%); */
 }
 
 .one:nth-child(odd) {
   flex-direction: row-reverse;
+  /* background-image: -webkit-linear-gradient(-30deg,  rgb(253, 227, 208) 50%, rgb(254, 197, 157) 70%); */
 }
 
 .imgDiv {
@@ -59,30 +61,35 @@
 }
 
 @media (max-width: 40rem) {
-.one, .one:nth-child(odd) {
+  .one,
+  .one:nth-child(odd) {
     /* background-color: lime; */
     /* width: 100%; */
     flex-direction: column;
     padding: 1rem;
-    margin: 1rem 0;
-}
+    background-image: none;
 
-.img {
-    width: 80%;
+    margin: 1rem 0;
+  }
+
+  .img {
+    width: 60%;
     margin-bottom: 1rem;
-}
-.info {
+  }
+
+  .info {
     /* background-color: linen; */
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-}
-.info h3 {
+  }
+  .info h3 {
     margin: 0;
-}
+    font-size: 2rem;
+  }
 
-.info p {
+  .info p {
     display: none;
-}
+  }
 }
