--- a/src/pages/Bride/Bride.module.css
+++ b/src/pages/Bride/Bride.module.css
@@ -1,64 +1,76 @@
-.sec {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .title {
   border-left: 7px solid rgb(201, 3, 3);
   font-size: 9rem;
-  letter-spacing: 0.5rem;
-  /* margin-bottom: 5rem; */
   padding-left: 2rem;
+  letter-spacing: 0.5rem;
+
   text-shadow: 2px 2px 4px rgb(201, 3, 3);
 }
 
 .text {
   font-size: 5rem;
-  /* font-weight: 600; */
   line-height: 1.5;
-  width: 50%;
   text-shadow: 1px 1px 4px rgb(201, 3, 3);
+  width: 50%;
 }
 
 .textBlock {
   color: white;
   left: 2rem;
   padding-left: 0.5rem;
+  /* background-color: mediumorchid; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-around;
+  height: 70%;
   position: absolute;
   top: 16rem;
   width: 90%;
-  height: 70%;
 }
 
-
 .img {
-  /* height: 900px; */
+  height: 750px;
   opacity: 0.6;
   width: 100%;
   box-shadow: 0px 5px 15px -5px rgb(30, 30, 30);
-  height: 750px;
 }
 
-/***** CONTENT ***********************************************************/
+.img2 {
+  width: 100%;
+  margin: 4rem 0;
+}
 
 .content {
+  /* background-color: mediumorchid; */
   width: 70%;
-  padding: 4rem 0;
+  padding: 4rem;
+  text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
 }
 
 .content h3 {
-  text-shadow: 2px 2px 4px rgb(201, 3, 3);
-  color: #fff;
   font-size: 4rem;
+  color: #fff;
   margin-bottom: 3rem;
+  text-shadow: 2px 2px 4px rgb(201, 3, 3);
+}
+
+.content p {
+  line-height: 3rem;
+  color: rgb(30,30,30);
+
+}
+
+.sec {
+  /* background-color: lightcoral; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
 }
 
 @media (min-width: 1900px) {
@@ -76,29 +88,42 @@
 
 @media (max-width: 40rem) {
   .textBlock {
-    top: 18rem;
+    top: 17rem;
     left: 0;
-    width: 90%;
+    width: 100%;
     height: 20%;
     /* background-color: mediumorchid; */
     padding-left: 0.5rem;
   }
   .title {
-    font-size: 4rem;
+    font-size: 2rem;
     /* border-left: 7px solid rgb(201, 3, 3); */
     margin-bottom: 2rem;
     padding-left: 0.5rem;
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.3rem;
   }
   .text {
     font-size: 1.5rem;
-    width: 100%;
+    width: 80%;
   }
   .content {
-    width: 90%;
-    padding: 2rem 0;
+    width: 100%;
+    padding: 2rem;
+    /* background-color: mediumpurple; */
+  }
+  .content h3 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+  .content p {
+    line-height: 2rem;
+    margin-bottom: 2rem;
   }
   .img {
     height: auto;
+  }
+
+  .img2 {
+    display: none;
   }
 }
