--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,6 @@ body {
   margin: 0px;
   color: rgb(40, 40, 40);
   font-family: 'Poiret One', cursive;
-   /* padding-top: 8rem; */
-  /* font-weight: 800; */
-  /* font-family: 'Great Vibes', cursive; */
-  /* font-family: 'Mukta', sans-serif; */
 }
 
 h1,
@@ -35,12 +31,12 @@ img {
 
 a {
   text-decoration: none;
-  color: rgb(40,40,40);
+  color: rgb(40, 40, 40);
 }
 
 .animeLeft {
   opacity: 0;
-  animation: animeLeft .5s forwards;
+  animation: animeLeft 0.5s forwards;
 }
 
 @keyframes animeLeft {
